# canaad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  dist-workspace.toml  justfile  lefthook.yml  release.toml
.github/workflows/: ci.yml  release-cli.yml  release-core.yml
crates/canaad-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/canaad-cli/src/: args.rs  commands.rs  io.rs  main.rs
crates/canaad-cli/tests/: canonicalize.rs  exit_codes.rs  hash.rs  input.rs  mod.rs  validate.rs
crates/canaad-core/: CHANGELOG.md  Cargo.toml  README.md
crates/canaad-core/fuzz/: .gitignore  Cargo.toml
crates/canaad-core/fuzz/corpus/fuzz_canonicalize_default/: invalid_integer_out_of_range
crates/canaad-core/fuzz/corpus/fuzz_canonicalize_object/: valid_max_safe_integer  valid_unicode_values
crates/canaad-core/fuzz/corpus/fuzz_parse_default/: invalid_duplicate_key  invalid_missing_v  invalid_nul_in_tenant  invalid_wrong_version  valid_minimal  valid_with_timestamp
crates/canaad-core/fuzz/fuzz_targets/: fuzz_canonicalize_default.rs  fuzz_canonicalize_object.rs  fuzz_parse_default.rs
crates/canaad-core/src/: api.rs  canon.rs  error.rs  lib.rs
crates/canaad-core/src/context/: builder.rs  mod.rs  tests.rs
crates/canaad-core/src/parse/: aad.rs  mod.rs  scan.rs
crates/canaad-core/src/profile/: default.rs  mod.rs
crates/canaad-core/src/tests/test_vectors/: edge_cases.rs  mod.rs  negative.rs  property.rs  section_10.rs  section_14.rs
crates/canaad-core/src/types/: extension.rs  field_key.rs  mod.rs  safe_int.rs  string_types.rs
crates/canaad-wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/canaad-wasm/src/: lib.rs  tests.rs
crates/canaad-wasm/tests/: wasm.test.ts
keys/: EA92184CE5A34B0BC9EE3A918E2840A297D47681.asc
pkg/: README.md  package.json
scripts/: md-to-json.mjs  patch-pkg.mjs
