[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/canaad-core/fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnufood/canaad"
authors = ["Ethan Henderson <git@gnu.foo>"]
keywords = ["aead", "aad", "canonicalization", "jcs", "rfc8785"]
categories = ["cryptography", "encoding"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
rust_2018_idioms = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Reasonable exceptions
module_name_repetitions = "allow"
redundant_pub_crate = "allow"
must_use_candidate = "allow"
cargo_common_metadata = "allow"

[profile.dist]
inherits = "release"
lto = "thin"
