[package]
name = "canaad-cli"
version = "2.0.0"
description = "CLI tool for AAD canonicalization per RFC 8785"
documentation = "https://docs.rs/canaad-cli"
homepage = "https://gnu.foo/projects/canaad"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "canaad"
path = "src/main.rs"

[dependencies]
canaad-core = { version = "2.0.0", path = "../canaad-core" }
clap = { version = ">=4, <4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
