[package]
name = "canaad-core"
version = "2.0.0"
description = "Core library for AAD canonicalization per RFC 8785"
documentation = "https://docs.rs/canaad-core"
homepage = "https://gnu.foo/projects/canaad"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_json_canonicalizer = "0.2"

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"
proptest = "1.4"
rstest = "0.25"
# preserve_order enables IndexMap-backed serde_json::Map so key emission
# order is observable in tests that assert canonical key ordering.
serde_json = { version = "1.0", features = ["preserve_order"] }

[lints]
workspace = true
