[package]
name = "canaad-wasm"
version = "1.0.0"
description = "WASM bindings for AAD canonicalization per RFC 8785"
publish = false  # build artifact — delivered via wasm-pack to pkg/, not crates.io
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canaad-core = { version = "1.0.0", path = "../canaad-core" }
wasm-bindgen = "0.2"
sha2 = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
redundant_pub_crate = "allow"
must_use_candidate = "allow"
cargo_common_metadata = "allow"
missing_const_for_fn = "allow"  # wasm_bindgen exports cannot be const
missing_errors_doc = "allow"  # WASM exports; JS callers see JsError, not Rust doc conventions
